--- a/styles.css
+++ b/styles.css
@@ -82,17 +82,6 @@ ul {
   font-weight: 700;
 }
 
-nav a {
-  text-decoration: none;
-  color: currentColor;
-}
-
-nav a:hover,
-nav a:focus {
-  border-bottom: 3px solid var(--light-grey);
-  color: var(--accent);
-}
-
 .about,
 .projects {
   padding: 1em 2em;
@@ -135,14 +124,14 @@ nav a:focus {
 /* Navigation Layout */
 .nav {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: .5em 1em;
   background: var(--nav-bg);
   color: var(--nav-text);
 }
 
 .nav-title {
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 .nav-list {
@@ -154,6 +143,33 @@ nav a:focus {
   padding: .5em;
   letter-spacing: 1px;
 }
+
+.nav-list-item a {
+  text-decoration: none;
+  color: currentColor;
+}
+
+.nav-list-item a:hover,
+.nav-list-item a:focus {
+  border-bottom: 3px solid var(--light-grey);
+  color: var(--accent);
+}
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: var(--nav-text);
+}
+
 
 /* Intro Section */
 .intro {
@@ -246,6 +262,51 @@ i {
 }
 
 /* Media Queries */
+@media (max-width: 700px) {
+  .hamburger {
+    display: block;
+  }
+
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  .nav {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .nav-list {
+    position: absolute;
+    left: -100%;
+    top: 45px;
+    gap: 0;
+    flex-direction: column;
+    background-color: var(--nav-bg);
+    color: var(--nav-text);
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+  }
+
+  .nav-list-item {
+    margin: 16px 0;
+  }
+
+  .nav-list.active {
+    left: 0;
+  }
+}
+
 @media(min-width: 700px) {
   body {
     font-size: var(--body-lg-fs);
@@ -261,8 +322,8 @@ i {
   }
 
   .nav {
-    padding: 1em 1.5em;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
   }
 
